update something check

--- a/home.html.erb
+++ b/home.html.erb
@@ -2,8 +2,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 <body data-smooth-scroll-offset="77">
-       <!--  <div class="nav-container">
+       <!--  <div class="nav-container">I Just wont to test
             <div class="via-1514865900670" via="via-1514865900670" vio="Creatnet">
                 <nav class="bar bar-toggle">
                     <div class="container">
